try catch and lombok